Update root div styling to address and fix overscroll issue on mobile, add better UI to '404' page.

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 #root {
+  position: relative;
   height: 100vh;
   height: 100dvh;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 @media screen and (min-width: 1024px) {
